Sync all content

--- a/content/resources/29931508.md
+++ b/content/resources/29931508.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Tony discusses the variety of hull shapes displayed in the Museum's collection
   of historical half hull models.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/95bea34744b734ea3063b9935b414818_29931508.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/95bea34744b734ea3063b9935b414818_29931508.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Tony discusses the variety of hull shapes displayed in the Museum's collection
@@ -10,6 +10,10 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Tony discusses the variety of hull shapes displayed in the Museum's collection
     of historical half hull models.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Exploring the MIT Museum's stored nautical collections
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 1508.jpg
 uid: 95bea347-44b7-34ea-3063-b9935b414818
