--- a/content/resources/2993003.md
+++ b/content/resources/2993003.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Students review historic designs in preparation for laying out a preliminary
   design on their own wooden model.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/6af83a9865f3a1003fe484a6d3a668d0_2993003.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/6af83a9865f3a1003fe484a6d3a668d0_2993003.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Students review historic designs in preparation for laying out a preliminary
@@ -10,6 +10,10 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Students review historic designs in preparation for laying out a preliminary
     design on their own wooden model.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Image Gallery
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 003.jpg
 uid: 6af83a98-65f3-a100-3fe4-84a6d3a668d0
