--- a/content/resources/2993007.md
+++ b/content/resources/2993007.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Instructor Tony Dias demonstrates layout of hull shape on a wood block
   prior to the first cut.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/41d38a162e853c248591e153def5db10_2993007.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/41d38a162e853c248591e153def5db10_2993007.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Instructor Tony Dias demonstrates layout of hull shape on a wood block
@@ -10,6 +10,10 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Instructor Tony Dias demonstrates layout of hull shape on a wood block
     prior to the first cut.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Image Gallery
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 007.jpg
 uid: 41d38a16-2e85-3c24-8591-e153def5db10
