--- a/content/resources/2993014.md
+++ b/content/resources/2993014.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: Reuben planes a rough shape.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/cdf72a0e8c81b9394a6da74b3a55f437_2993014.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/cdf72a0e8c81b9394a6da74b3a55f437_2993014.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Reuben planes a rough shape.
   credit: Photo by Kurt Hasselbalch.
   image-alt: Reuben planes a rough shape.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Image Gallery
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 014.jpg
 uid: cdf72a0e-8c81-b939-4a6d-a74b3a55f437
