--- a/content/resources/2993016.md
+++ b/content/resources/2993016.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: More planing technique.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/30daf96e30b7c9bbb641255e8dcbaf5d_2993016.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/30daf96e30b7c9bbb641255e8dcbaf5d_2993016.jpg
 file_type: image/jpeg
 image_metadata:
   caption: More planing technique.
   credit: Photo by Kurt Hasselbalch.
   image-alt: More planing technique.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Image Gallery
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 016.jpg
 uid: 30daf96e-30b7-c9bb-b641-255e8dcbaf5d
