--- a/content/resources/2993019.md
+++ b/content/resources/2993019.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: A student plots a curve on his hull model.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/01a602fdd99925bc098ae1e3c5012709_2993019.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/01a602fdd99925bc098ae1e3c5012709_2993019.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student plots a curve on his hull model.
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student plots a curve on his hull model.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Building the Models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 019.jpg
 uid: 01a602fd-d999-25bc-098a-e1e3c5012709
