--- a/content/resources/2993020.md
+++ b/content/resources/2993020.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: Another student lays out a shear curve on his hull model.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/ec4f58f24f1af6ee545c7ce7342953a5_2993020.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/ec4f58f24f1af6ee545c7ce7342953a5_2993020.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Another student lays out a shear curve on his hull model.
   credit: Photo by Kurt Hasselbalch.
   image-alt: Another student lays out a shear curve on his hull model.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Building the Models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 019.jpg
 uid: ec4f58f2-4f1a-f6ee-545c-7ce7342953a5
