--- a/content/resources/2993021.md
+++ b/content/resources/2993021.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: A student prepares to make his initial profile cut.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/770122004f7378158ef674e8f92da863_2993021.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/770122004f7378158ef674e8f92da863_2993021.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student prepares to make his initial profile cut.
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student prepares to make his initial profile cut.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Building the Models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 021.jpg
 uid: 77012200-4f73-7815-8ef6-74e8f92da863
