--- a/content/resources/2993024.md
+++ b/content/resources/2993024.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: Students at various stages of carving process.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/a9b73fad2fc41dee4487c051601f1324_2993024.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/a9b73fad2fc41dee4487c051601f1324_2993024.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Students at various stages of carving process.
   credit: Photo by Kurt Hasselbalch.
   image-alt: Students at various stages of carving process.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Building the Models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 024.jpg
 uid: a9b73fad-2fc4-1dee-4487-c051601f1324
