--- a/content/resources/2993026.md
+++ b/content/resources/2993026.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: Cutting away.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/884947e138a8ad720ce9de57765258da_2993026.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/884947e138a8ad720ce9de57765258da_2993026.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Cutting away.
   credit: Photo by Kurt Hasselbalch.
   image-alt: Cutting away.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Building the Models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 026.jpg
 uid: 884947e1-38a8-ad72-0ce9-de57765258da
