--- a/content/resources/2993029.md
+++ b/content/resources/2993029.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: Reuben and a student look at traditional boat designs together.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/79071244d5eb12e01f66ae2f1055cd7b_2993029.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/79071244d5eb12e01f66ae2f1055cd7b_2993029.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Reuben and a student look at traditional boat designs together.
   credit: Photo by Kurt Hasselbalch.
   image-alt: Reuben and a student look at traditional boat designs together.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Building the Models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 029.jpg
 uid: 79071244-d5eb-12e0-1f66-ae2f1055cd7b
