--- a/content/resources/2993031.md
+++ b/content/resources/2993031.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: Reuben discusses a model's shape with a student.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/3b6ea700f4b38a41576026fa9637b367_2993031.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/3b6ea700f4b38a41576026fa9637b367_2993031.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Reuben discusses a model's shape with a student.
   credit: Photo by Kurt Hasselbalch.
   image-alt: Reuben discusses a model's shape with a student.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Building the Models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 031.jpg
 uid: 3b6ea700-f4b3-8a41-5760-26fa9637b367
