--- a/content/resources/2993034.md
+++ b/content/resources/2993034.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: A student sands his hull shape smooth.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/f70b5bfb26fcd01b36fbd550637bc06c_2993034.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/f70b5bfb26fcd01b36fbd550637bc06c_2993034.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student sands his hull shape smooth.
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student sands his hull shape smooth.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Building the Models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 034.jpg
 uid: f70b5bfb-26fc-d01b-36fb-d550637bc06c
