--- a/content/resources/2993035.md
+++ b/content/resources/2993035.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: A student uses the band saw.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/b9573211d901ea05e0d36bd999494aa3_2993035.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/b9573211d901ea05e0d36bd999494aa3_2993035.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student uses the band saw.
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student uses the band saw.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Building the Models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 035.jpg
 uid: b9573211-d901-ea05-e0d3-6bd999494aa3
