--- a/content/resources/2993036.md
+++ b/content/resources/2993036.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: A student contemplates hull shaping progress.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/c54ba66e72e72dafc74c57433ef174b9_2993036.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/c54ba66e72e72dafc74c57433ef174b9_2993036.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student contemplates hull shaping progress.
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student contemplates hull shaping progress.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Building the Models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 036.jpg
 uid: c54ba66e-72e7-2daf-c74c-57433ef174b9
