--- a/content/resources/2993038.md
+++ b/content/resources/2993038.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: Students work at various stages of progress.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/ff970f041dbeb05763f4ac00ad75c582_2993038.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/ff970f041dbeb05763f4ac00ad75c582_2993038.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Students work at various stages of progress.
   credit: Photo by Kurt Hasselbalch.
   image-alt: Students work at various stages of progress.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Building the Models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 038.jpg
 uid: ff970f04-1dbe-b057-63f4-ac00ad75c582
