--- a/content/resources/2993042.md
+++ b/content/resources/2993042.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: A student sites the underwater shape of her hull model.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/1fbf530944fd475e92b368c64a7e2304_2993042.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/1fbf530944fd475e92b368c64a7e2304_2993042.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student sites the underwater shape of her hull model.
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student sites the underwater shape of her hull model.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Building the Models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 042.jpg
 uid: 1fbf5309-44fd-475e-92b3-68c64a7e2304
