--- a/content/resources/2993043.md
+++ b/content/resources/2993043.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: Reuben and a student discuss hull model shape.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/e29fe4a7fbf75ba0354531185c132b66_2993043.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/e29fe4a7fbf75ba0354531185c132b66_2993043.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Reuben and a student discuss hull model shape.
   credit: Photo by Kurt Hasselbalch.
   image-alt: Reuben and a student discuss hull model shape.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Building the Models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 043.jpg
 uid: e29fe4a7-fbf7-5ba0-3545-31185c132b66
