--- a/content/resources/2993044.md
+++ b/content/resources/2993044.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: More chisel work.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/7b2cce8c5c0031b58e460f73084cca8d_2993044.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/7b2cce8c5c0031b58e460f73084cca8d_2993044.jpg
 file_type: image/jpeg
 image_metadata:
   caption: More chisel work.
   credit: Photo by Kurt Hasselbalch.
   image-alt: More chisel work.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Building the Models
+parent_type: CourseSection
 resourcetype: Image
 title: 2993044.jpg
 uid: 7b2cce8c-5c00-31b5-8e46-0f73084cca8d
