--- a/content/resources/2993046.md
+++ b/content/resources/2993046.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: A student prepares to mount his model.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/8c476509f9f090dc623f160cd647b984_2993046.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/8c476509f9f090dc623f160cd647b984_2993046.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student prepares to mount his model.
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student prepares to mount his model.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Building the Models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 046.jpg
 uid: 8c476509-f9f0-90dc-623f-160cd647b984
