--- a/content/resources/2993051.md
+++ b/content/resources/2993051.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: Student sites student siting model.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/dda365aa13284a26ddd00cb0d236760e_2993051.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/dda365aa13284a26ddd00cb0d236760e_2993051.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Student sites student siting model.
   credit: Photo by Kurt Hasselbalch.
   image-alt: Student sites student siting model.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Building the Models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 051.jpg
 uid: dda365aa-1328-4a26-ddd0-0cb0d236760e
