--- a/content/resources/2993052.md
+++ b/content/resources/2993052.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'Fine shaping with a cabinet scraper. Other key tools: chisel (foreground),
   spokeshave (left), and medium plane (right).'
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/7ef0943ac70f1c1c221942231c31984e_2993052.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/7ef0943ac70f1c1c221942231c31984e_2993052.jpg
 file_type: image/jpeg
 image_metadata:
   caption: 'Fine shaping with a cabinet scraper. Other key tools: chisel (foreground),
@@ -10,6 +10,10 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: 'Fine shaping with a cabinet scraper.  Other key tools: chisel (foreground),
     spokeshave (left), and medium plane (right).'
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Building the Models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 052.jpg
 uid: 7ef0943a-c70f-1c1c-2219-42231c31984e
