--- a/content/resources/2993053.md
+++ b/content/resources/2993053.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: Carving away.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/7e424626b98be50124069ca2cab6d016_2993053.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/7e424626b98be50124069ca2cab6d016_2993053.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Carving away.
   credit: Photo by Kurt Hasselbalch.
   image-alt: Carving away.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Building the Models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 053.jpg
 uid: 7e424626-b98b-e501-2406-9ca2cab6d016
