--- a/content/resources/2993055.md
+++ b/content/resources/2993055.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: More discussion.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/a23d80562530cc76c836652404df20be_2993055.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/a23d80562530cc76c836652404df20be_2993055.jpg
 file_type: image/jpeg
 image_metadata:
   caption: More discussion.
   credit: Photo by Kurt Hasselbalch.
   image-alt: More discussion.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Building the Models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 055.jpg
 uid: a23d8056-2530-cc76-c836-652404df20be
