--- a/content/resources/2993059.md
+++ b/content/resources/2993059.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: A student in the foreground planes his model.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/b505d910c3c86aae1e3a7b721f906273_2993059.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/b505d910c3c86aae1e3a7b721f906273_2993059.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student in the foreground planes his model.
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student in the foreground planes his model.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Building the Models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 059.jpg
 uid: b505d910-c3c8-6aae-1e3a-7b721f906273
