--- a/content/resources/2993060.md
+++ b/content/resources/2993060.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: A student discusses his model with Tony
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/c1784651e9b90f8afad6327d73e879fc_2993060.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/c1784651e9b90f8afad6327d73e879fc_2993060.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student discusses his model with Tony
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student discusses his model with Tony
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Building the Models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 060.jpg
 uid: c1784651-e9b9-0f8a-fad6-327d73e879fc
