--- a/content/resources/2993061.md
+++ b/content/resources/2993061.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Reuben and a student begin to lay out a lines plan for the model to the
   right.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/068723084c5b6d57fcabd5f8fc8e5b5b_2993061.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/068723084c5b6d57fcabd5f8fc8e5b5b_2993061.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Reuben and a student begin to lay out a lines plan for the model to the
@@ -10,6 +10,10 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Reuben and a student begin to lay out a lines plan for the model to the
     right.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Drawing up plans for the completed models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 061.jpg
 uid: 06872308-4c5b-6d57-fcab-d5f8fc8e5b5b
