--- a/content/resources/2993069.md
+++ b/content/resources/2993069.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: A student lays out grid lines for his lines plan.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/0fc2ac9d256a60a6de9453d45ffb39a5_2993069.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/0fc2ac9d256a60a6de9453d45ffb39a5_2993069.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student lays out grid lines for his lines plan.
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student lays out grid lines for his lines plan.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Drawing up plans for the completed models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 069.jpg
 uid: 0fc2ac9d-256a-60a6-de94-53d45ffb39a5
