--- a/content/resources/2993072.md
+++ b/content/resources/2993072.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: A student uses a rasp in a tight curve.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/2a000c27d60c3d25042e361ff5f5033c_2993072.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/2a000c27d60c3d25042e361ff5f5033c_2993072.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student uses a rasp in a tight curve.
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student uses a rasp in a tight curve.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Building the Models
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 072.jpg
 uid: 2a000c27-d60c-3d25-042e-361ff5f5033c
