--- a/content/resources/2993078.md
+++ b/content/resources/2993078.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: Lifts from a builder's model separated on the table.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/37e692ba1c4ea0214a4995507b86f599_2993078.jpg
+file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/37e692ba1c4ea0214a4995507b86f599_2993078.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Lifts from a builder's model separated on the table.
   credit: Photo by Kurt Hasselbalch.
   image-alt: Lifts from a builder's model separated on the table.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Exploring the MIT Museum's stored nautical collections
+parent_type: CourseSection
 resourcetype: Image
 title: 2.993 078.jpg
 uid: 37e692ba-1c4e-a021-4a49-95507b86f599
