Sync all content

--- a/content/resources/2993009.md
+++ b/content/resources/2993009.md
@@ -14,6 +14,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Image Gallery
 parent_type: CourseSection
+parent_uid: 1908160a-10b3-4495-98f8-3ea7592a646f
 resourcetype: Image
 title: 2.993 009.jpg
 uid: 2a9c28ea-4a34-d440-a827-aeb1de2cf754
