--- a/content/resources/2993015.md
+++ b/content/resources/2993015.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Image Gallery
 parent_type: CourseSection
+parent_uid: 1908160a-10b3-4495-98f8-3ea7592a646f
 resourcetype: Image
 title: 2.993 015.jpg
 uid: 468cc5b1-ad9a-232f-d816-b26c7cc26650
