--- a/content/resources/2993018.md
+++ b/content/resources/2993018.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 018.jpg
 uid: f2b8af50-23b9-3758-54ee-78ff2df06ad4
