--- a/content/resources/2993022.md
+++ b/content/resources/2993022.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 022.jpg
 uid: 0361c990-a984-0867-97a7-3a220678341e
