--- a/content/resources/2993023.md
+++ b/content/resources/2993023.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 023.jpg
 uid: d1b28cf8-a2be-3cf2-9eed-639252947b01
