--- a/content/resources/2993043.md
+++ b/content/resources/2993043.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 043.jpg
 uid: e29fe4a7-fbf7-5ba0-3545-31185c132b66
