--- a/content/resources/2993061.md
+++ b/content/resources/2993061.md
@@ -14,6 +14,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Drawing up plans for the completed models
 parent_type: CourseSection
+parent_uid: 350c9abd-1a09-2420-0830-be0b5e07eb7a
 resourcetype: Image
 title: 2.993 061.jpg
 uid: 06872308-4c5b-6d57-fcab-d5f8fc8e5b5b
