--- a/content/resources/2993062.md
+++ b/content/resources/2993062.md
@@ -14,6 +14,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Drawing up plans for the completed models
 parent_type: CourseSection
+parent_uid: 350c9abd-1a09-2420-0830-be0b5e07eb7a
 resourcetype: Image
 title: 2.993 062.jpg
 uid: d8c20d13-997c-f861-7b56-96f87d952ae8
