--- a/content/resources/2993070.md
+++ b/content/resources/2993070.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 070.jpg
 uid: 4df22f6f-7dc1-5c5f-ea81-84ef453c7e94
