--- a/content/resources/2993078.md
+++ b/content/resources/2993078.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Exploring the MIT Museum's stored nautical collections
 parent_type: CourseSection
+parent_uid: 5b340dbf-a7b0-1714-6eae-b6a1582f0e9c
 resourcetype: Image
 title: 2.993 078.jpg
 uid: 37e692ba-1c4e-a021-4a49-95507b86f599
