--- a/content/resources/29931447.md
+++ b/content/resources/29931447.md
@@ -12,6 +12,7 @@ learning_resource_types:
 ocw_type: OCWImage
 parent_title: Final Projects
 parent_type: CourseSection
+parent_uid: df2966f6-603b-725a-f7f5-7478b7969c7f
 resourcetype: Image
 title: 2.993_1447.jpg
 uid: b1d1ad88-5d5d-afc4-7cdc-8a475bc424df
