--- a/content/resources/29931448.md
+++ b/content/resources/29931448.md
@@ -12,6 +12,7 @@ learning_resource_types:
 ocw_type: OCWImage
 parent_title: Final Projects
 parent_type: CourseSection
+parent_uid: df2966f6-603b-725a-f7f5-7478b7969c7f
 resourcetype: Image
 title: 2.993_1448.jpg
 uid: de6a7d69-0b45-542f-3f6b-57cabce94d0a
