--- a/content/resources/29931449.md
+++ b/content/resources/29931449.md
@@ -12,6 +12,7 @@ learning_resource_types:
 ocw_type: OCWImage
 parent_title: Final Projects
 parent_type: CourseSection
+parent_uid: df2966f6-603b-725a-f7f5-7478b7969c7f
 resourcetype: Image
 title: 2.993_1449.jpg
 uid: 04d2cb7f-6bbd-a904-323c-5569ff27bdcf
