--- a/content/resources/29931508.md
+++ b/content/resources/29931508.md
@@ -14,6 +14,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Exploring the MIT Museum's stored nautical collections
 parent_type: CourseSection
+parent_uid: 5b340dbf-a7b0-1714-6eae-b6a1582f0e9c
 resourcetype: Image
 title: 2.993 1508.jpg
 uid: 95bea347-44b7-34ea-3063-b9935b414818
