--- a/content/resources/2993003.md
+++ b/content/resources/2993003.md
@@ -14,6 +14,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Image Gallery
 parent_type: CourseSection
+parent_uid: 1908160a-10b3-4495-98f8-3ea7592a646f
 resourcetype: Image
 title: 2.993 003.jpg
 uid: 6af83a98-65f3-a100-3fe4-84a6d3a668d0
