--- a/content/resources/2993007.md
+++ b/content/resources/2993007.md
@@ -14,6 +14,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Image Gallery
 parent_type: CourseSection
+parent_uid: 1908160a-10b3-4495-98f8-3ea7592a646f
 resourcetype: Image
 title: 2.993 007.jpg
 uid: 41d38a16-2e85-3c24-8591-e153def5db10
