--- a/content/resources/2993010.md
+++ b/content/resources/2993010.md
@@ -13,6 +13,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Image Gallery
 parent_type: CourseSection
+parent_uid: 1908160a-10b3-4495-98f8-3ea7592a646f
 resourcetype: Image
 title: 2.993 010.jpg
 uid: 5eb997fc-f38f-1cb8-e443-3de75118669f
