--- a/content/resources/2993011.md
+++ b/content/resources/2993011.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Image Gallery
 parent_type: CourseSection
+parent_uid: 1908160a-10b3-4495-98f8-3ea7592a646f
 resourcetype: Image
 title: 2.993 011.jpg
 uid: 8095c7cb-49f2-aac0-7797-4a0077e2fccb
