--- a/content/resources/2993012.md
+++ b/content/resources/2993012.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Image Gallery
 parent_type: CourseSection
+parent_uid: 1908160a-10b3-4495-98f8-3ea7592a646f
 resourcetype: Image
 title: 2.993 012.jpg
 uid: 90d6a454-fe19-06b8-810e-f94e3dabf46b
