--- a/content/resources/2993014.md
+++ b/content/resources/2993014.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Image Gallery
 parent_type: CourseSection
+parent_uid: 1908160a-10b3-4495-98f8-3ea7592a646f
 resourcetype: Image
 title: 2.993 014.jpg
 uid: cdf72a0e-8c81-b939-4a6d-a74b3a55f437
