--- a/content/resources/2993016.md
+++ b/content/resources/2993016.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Image Gallery
 parent_type: CourseSection
+parent_uid: 1908160a-10b3-4495-98f8-3ea7592a646f
 resourcetype: Image
 title: 2.993 016.jpg
 uid: 30daf96e-30b7-c9bb-b641-255e8dcbaf5d
