--- a/content/resources/2993017.md
+++ b/content/resources/2993017.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Image Gallery
 parent_type: CourseSection
+parent_uid: 1908160a-10b3-4495-98f8-3ea7592a646f
 resourcetype: Image
 title: 2.993 017.jpg
 uid: 75d7542c-f285-5f68-21b2-62e3b463443d
