--- a/content/resources/2993020.md
+++ b/content/resources/2993020.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 019.jpg
 uid: ec4f58f2-4f1a-f6ee-545c-7ce7342953a5
