--- a/content/resources/2993024.md
+++ b/content/resources/2993024.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 024.jpg
 uid: a9b73fad-2fc4-1dee-4487-c051601f1324
