--- a/content/resources/2993025.md
+++ b/content/resources/2993025.md
@@ -13,6 +13,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 025.jpg
 uid: 38d79a51-45ca-a010-3d9f-5265f79d95ee
