--- a/content/resources/2993028.md
+++ b/content/resources/2993028.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 028.jpg
 uid: 7be035ed-f19e-17eb-3351-816a3abb1526
