--- a/content/resources/2993029.md
+++ b/content/resources/2993029.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 029.jpg
 uid: 79071244-d5eb-12e0-1f66-ae2f1055cd7b
