--- a/content/resources/2993030.md
+++ b/content/resources/2993030.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 030.jpg
 uid: db7c3d8f-bb26-5d77-1e5c-7e88fa9ba1ab
