--- a/content/resources/2993031.md
+++ b/content/resources/2993031.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 031.jpg
 uid: 3b6ea700-f4b3-8a41-5760-26fa9637b367
