--- a/content/resources/2993036.md
+++ b/content/resources/2993036.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 036.jpg
 uid: c54ba66e-72e7-2daf-c74c-57433ef174b9
