--- a/content/resources/2993038.md
+++ b/content/resources/2993038.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 038.jpg
 uid: ff970f04-1dbe-b057-63f4-ac00ad75c582
