--- a/content/resources/2993039.md
+++ b/content/resources/2993039.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 039.jpg
 uid: 050aea8b-5d41-ac9f-517a-d4978619eada
