--- a/content/resources/2993040.md
+++ b/content/resources/2993040.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 040.jpg
 uid: ee15dcaa-2fdb-99f3-3ac4-bed5939bbd41
