--- a/content/resources/2993042.md
+++ b/content/resources/2993042.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 042.jpg
 uid: 1fbf5309-44fd-475e-92b3-68c64a7e2304
