--- a/content/resources/2993044.md
+++ b/content/resources/2993044.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2993044.jpg
 uid: 7b2cce8c-5c00-31b5-8e46-0f73084cca8d
