--- a/content/resources/2993047.md
+++ b/content/resources/2993047.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 047.jpg
 uid: d379f2ce-52a9-b18a-e2ba-31a706197e8b
