--- a/content/resources/2993049.md
+++ b/content/resources/2993049.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 049.jpg
 uid: b2d7e46d-a40a-683b-9269-f1f981af1337
