--- a/content/resources/2993050.md
+++ b/content/resources/2993050.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 050.jpg
 uid: f31d54f6-f5a0-e6f9-f6aa-4e326a5e5ac9
