--- a/content/resources/2993052.md
+++ b/content/resources/2993052.md
@@ -14,6 +14,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 052.jpg
 uid: 7ef0943a-c70f-1c1c-2219-42231c31984e
