--- a/content/resources/2993053.md
+++ b/content/resources/2993053.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 053.jpg
 uid: 7e424626-b98b-e501-2406-9ca2cab6d016
