--- a/content/resources/2993054.md
+++ b/content/resources/2993054.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 054.jpg
 uid: 4b1fddcf-0a8b-68d1-db0f-ab36391d1730
