--- a/content/resources/2993055.md
+++ b/content/resources/2993055.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 055.jpg
 uid: a23d8056-2530-cc76-c836-652404df20be
