--- a/content/resources/2993056.md
+++ b/content/resources/2993056.md
@@ -14,6 +14,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 056.jpg
 uid: b6957f42-9122-b9fc-149f-472f2683b8f6
