--- a/content/resources/2993059.md
+++ b/content/resources/2993059.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 059.jpg
 uid: b505d910-c3c8-6aae-1e3a-7b721f906273
