--- a/content/resources/2993060.md
+++ b/content/resources/2993060.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 060.jpg
 uid: c1784651-e9b9-0f8a-fad6-327d73e879fc
