--- a/content/resources/2993064.md
+++ b/content/resources/2993064.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Drawing up plans for the completed models
 parent_type: CourseSection
+parent_uid: 350c9abd-1a09-2420-0830-be0b5e07eb7a
 resourcetype: Image
 title: 2.993 064.jpg
 uid: 1662b7db-0486-1d61-bf54-c05039de623f
