--- a/content/resources/2993066.md
+++ b/content/resources/2993066.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Drawing up plans for the completed models
 parent_type: CourseSection
+parent_uid: 350c9abd-1a09-2420-0830-be0b5e07eb7a
 resourcetype: Image
 title: 2.993 066.jpg
 uid: 9f1426b9-4a15-018c-408d-86e46d5da01e
