--- a/content/resources/2993071.md
+++ b/content/resources/2993071.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 071.jpg
 uid: d09d69cb-3ee1-3cf4-69d7-86e70c140790
