--- a/content/resources/2993072.md
+++ b/content/resources/2993072.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 072.jpg
 uid: 2a000c27-d60c-3d25-042e-361ff5f5033c
