--- a/content/resources/2993073.md
+++ b/content/resources/2993073.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
+parent_uid: d579ce29-1e9b-3bea-8df6-e1ac45a11554
 resourcetype: Image
 title: 2.993 073.jpg
 uid: f8b34a9c-6a6a-f94d-1422-a87e1e77a143
