--- a/content/resources/2993074.md
+++ b/content/resources/2993074.md
@@ -14,6 +14,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Exploring the MIT Museum's stored nautical collections
 parent_type: CourseSection
+parent_uid: 5b340dbf-a7b0-1714-6eae-b6a1582f0e9c
 resourcetype: Image
 title: 2.993 074.jpg
 uid: 24082748-1696-f17b-95ef-cf5f1db0f814
