--- a/content/resources/2993077.md
+++ b/content/resources/2993077.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Exploring the MIT Museum's stored nautical collections
 parent_type: CourseSection
+parent_uid: 5b340dbf-a7b0-1714-6eae-b6a1582f0e9c
 resourcetype: Image
 title: 2.993 077.jpg
 uid: 2f0134dc-507f-52f9-5674-840fa473f0d7
