--- a/content/resources/29931507.md
+++ b/content/resources/29931507.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Exploring the MIT Museum's stored nautical collections
 parent_type: CourseSection
+parent_uid: 5b340dbf-a7b0-1714-6eae-b6a1582f0e9c
 resourcetype: Image
 title: 2.993 1507.jpg
 uid: f3e18fb8-0eb2-1a8c-96a4-7350c4451774
