Sync all content

--- a/content/resources/2-993iap07.md
+++ b/content/resources/2-993iap07.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: The instructors and students pose with their completed half-hull model
   boats. (Photograph by Kurt Hasselbalch.)
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/7bc5155780b293a6bc5a37c8d0911886_2-993iap07.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/7bc5155780b293a6bc5a37c8d0911886_2-993iap07.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The instructors and students pose with their completed half-hull model
@@ -15,3 +15,5 @@ resourcetype: Image
 title: 2-993iap07.jpg
 uid: 7bc51557-80b2-93a6-bc5a-37c8d0911886
 ---
+The instructors and students pose with their completed half-hull model boats. (Photograph by Kurt Hasselbalch.)
+
