--- a/content/resources/2993022.md
+++ b/content/resources/2993022.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Another student makes his initial profile cut.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/0361c990a984086797a73a220678341e_2993022.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/0361c990a984086797a73a220678341e_2993022.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Another student makes his initial profile cut.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 022.jpg
 uid: 0361c990-a984-0867-97a7-3a220678341e
 ---
+Another student makes his initial profile cut.
+
