--- a/content/resources/2993025.md
+++ b/content/resources/2993025.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: A student cuts a shear line. Note the profile drawn in pencil on the
   side.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/38d79a5145caa0103d9f5265f79d95ee_2993025.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/38d79a5145caa0103d9f5265f79d95ee_2993025.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student cuts a shear line. Note the profile drawn in pencil on the side.
@@ -18,3 +18,5 @@ resourcetype: Image
 title: 2.993 025.jpg
 uid: 38d79a51-45ca-a010-3d9f-5265f79d95ee
 ---
+A student cuts a shear line. Note the profile drawn in pencil on the side.
+
