--- a/content/resources/2993047.md
+++ b/content/resources/2993047.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Reuben discusses sail design with students.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/d379f2ce52a9b18ae2ba31a706197e8b_2993047.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/d379f2ce52a9b18ae2ba31a706197e8b_2993047.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Reuben discusses sail design with students.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 047.jpg
 uid: d379f2ce-52a9-b18a-e2ba-31a706197e8b
 ---
+Reuben discusses sail design with students.
+
