--- a/content/resources/2993048.md
+++ b/content/resources/2993048.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: More model shaping.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/fc0e3c5e96c0b1626047b0f6cd9b7de0_2993048.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/fc0e3c5e96c0b1626047b0f6cd9b7de0_2993048.jpg
 file_type: image/jpeg
 image_metadata:
   caption: More model shaping.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 048.jpg
 uid: fc0e3c5e-96c0-b162-6047-b0f6cd9b7de0
 ---
+More model shaping.
+
