--- a/content/resources/2993050.md
+++ b/content/resources/2993050.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: A student adjusts a spokeshave.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/f31d54f6f5a0e6f9f6aa4e326a5e5ac9_2993050.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/f31d54f6f5a0e6f9f6aa4e326a5e5ac9_2993050.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student adjusts a spokeshave.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 050.jpg
 uid: f31d54f6-f5a0-e6f9-f6aa-4e326a5e5ac9
 ---
+A student adjusts a spokeshave.
+
