--- a/content/resources/2993058.md
+++ b/content/resources/2993058.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Student fairs model with sandpaper.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/43eb05a445e28ea27f98652baae99938_2993058.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/43eb05a445e28ea27f98652baae99938_2993058.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Student fairs model with sandpaper.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 058.jpg
 uid: 43eb05a4-45e2-8ea2-7f98-652baae99938
 ---
+Student fairs model with sandpaper.
+
