--- a/content/resources/2993073.md
+++ b/content/resources/2993073.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: More work with a rasp.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/f8b34a9c6a6af94d1422a87e1e77a143_2993073.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/f8b34a9c6a6af94d1422a87e1e77a143_2993073.jpg
 file_type: image/jpeg
 image_metadata:
   caption: More work with a rasp.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 073.jpg
 uid: f8b34a9c-6a6a-f94d-1422-a87e1e77a143
 ---
+More work with a rasp.
+
