--- a/content/resources/2993077.md
+++ b/content/resources/2993077.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Kurt disassembles lifts from a builder's model.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/2f0134dc507f52f95674840fa473f0d7_2993077.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/2f0134dc507f52f95674840fa473f0d7_2993077.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Kurt disassembles lifts from a builder's model.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 077.jpg
 uid: 2f0134dc-507f-52f9-5674-840fa473f0d7
 ---
+Kurt disassembles lifts from a builder's model.
+
