--- a/content/resources/29931447.md
+++ b/content/resources/29931447.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: All the finished half-hull models laid out.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/b1d1ad885d5dafc47cdc8a475bc424df_29931447.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/b1d1ad885d5dafc47cdc8a475bc424df_29931447.jpg
 file_type: image/jpeg
 image_metadata:
   caption: All the finished half-hull models laid out.
@@ -17,3 +17,5 @@ resourcetype: Image
 title: 2.993_1447.jpg
 uid: b1d1ad88-5d5d-afc4-7cdc-8a475bc424df
 ---
+All the finished half-hull models laid out.
+
