--- a/content/resources/29931508.md
+++ b/content/resources/29931508.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Tony discusses the variety of hull shapes displayed in the Museum's collection
   of historical half hull models.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/95bea34744b734ea3063b9935b414818_29931508.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/95bea34744b734ea3063b9935b414818_29931508.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Tony discusses the variety of hull shapes displayed in the Museum's collection
@@ -19,3 +19,5 @@ resourcetype: Image
 title: 2.993 1508.jpg
 uid: 95bea347-44b7-34ea-3063-b9935b414818
 ---
+Tony discusses the variety of hull shapes displayed in the Museum's collection of historical half hull models.
+
