--- a/content/resources/2993003.md
+++ b/content/resources/2993003.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Students review historic designs in preparation for laying out a preliminary
   design on their own wooden model.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/6af83a9865f3a1003fe484a6d3a668d0_2993003.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/6af83a9865f3a1003fe484a6d3a668d0_2993003.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Students review historic designs in preparation for laying out a preliminary
@@ -19,3 +19,5 @@ resourcetype: Image
 title: 2.993 003.jpg
 uid: 6af83a98-65f3-a100-3fe4-84a6d3a668d0
 ---
+Students review historic designs in preparation for laying out a preliminary design on their own wooden model.
+
