--- a/content/resources/2993007.md
+++ b/content/resources/2993007.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Instructor Tony Dias demonstrates layout of hull shape on a wood block
   prior to the first cut.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/41d38a162e853c248591e153def5db10_2993007.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/41d38a162e853c248591e153def5db10_2993007.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Instructor Tony Dias demonstrates layout of hull shape on a wood block
@@ -19,3 +19,5 @@ resourcetype: Image
 title: 2.993 007.jpg
 uid: 41d38a16-2e85-3c24-8591-e153def5db10
 ---
+Instructor Tony Dias demonstrates layout of hull shape on a wood block prior to the first cut.
+
