--- a/content/resources/2993009.md
+++ b/content/resources/2993009.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Instructor Reuben Smith shows the class a model profile sawn from a wood
   block.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/2a9c28ea4a34d440a827aeb1de2cf754_2993009.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/2a9c28ea4a34d440a827aeb1de2cf754_2993009.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Instructor Reuben Smith shows the class a model profile sawn from a wood
@@ -19,3 +19,5 @@ resourcetype: Image
 title: 2.993 009.jpg
 uid: 2a9c28ea-4a34-d440-a827-aeb1de2cf754
 ---
+Instructor Reuben Smith shows the class a model profile sawn from a wood block.
+
