--- a/content/resources/2993010.md
+++ b/content/resources/2993010.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Instructor Reuben Smith shows the class a model profile sawn from a wood
   block.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/5eb997fcf38f1cb8e4433de75118669f_2993010.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/5eb997fcf38f1cb8e4433de75118669f_2993010.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Instructor Reuben Smith shows the class a model profile sawn from a wood
@@ -18,3 +18,5 @@ resourcetype: Image
 title: 2.993 010.jpg
 uid: 5eb997fc-f38f-1cb8-e443-3de75118669f
 ---
+Instructor Reuben Smith shows the class a model profile sawn from a wood block.
+
