--- a/content/resources/2993011.md
+++ b/content/resources/2993011.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Reuben discusses different model shapes with the class.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/8095c7cb49f2aac077974a0077e2fccb_2993011.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/8095c7cb49f2aac077974a0077e2fccb_2993011.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Reuben discusses different model shapes with the class.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 011.jpg
 uid: 8095c7cb-49f2-aac0-7797-4a0077e2fccb
 ---
+Reuben discusses different model shapes with the class.
+
