--- a/content/resources/2993014.md
+++ b/content/resources/2993014.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Reuben planes a rough shape.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/cdf72a0e8c81b9394a6da74b3a55f437_2993014.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/cdf72a0e8c81b9394a6da74b3a55f437_2993014.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Reuben planes a rough shape.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 014.jpg
 uid: cdf72a0e-8c81-b939-4a6d-a74b3a55f437
 ---
+Reuben planes a rough shape.
+
