--- a/content/resources/2993015.md
+++ b/content/resources/2993015.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Reuben demonstrates another planing technique.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/468cc5b1ad9a232fd816b26c7cc26650_2993015.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/468cc5b1ad9a232fd816b26c7cc26650_2993015.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Reuben demonstrates another planing technique.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 015.jpg
 uid: 468cc5b1-ad9a-232f-d816-b26c7cc26650
 ---
+Reuben demonstrates another planing technique.
+
