--- a/content/resources/2993018.md
+++ b/content/resources/2993018.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: A student cuts a design profile from a wood block.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/f2b8af5023b9375854ee78ff2df06ad4_2993018.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/f2b8af5023b9375854ee78ff2df06ad4_2993018.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student cuts a design profile from a wood block.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 018.jpg
 uid: f2b8af50-23b9-3758-54ee-78ff2df06ad4
 ---
+A student cuts a design profile from a wood block.
+
