--- a/content/resources/2993019.md
+++ b/content/resources/2993019.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: A student plots a curve on his hull model.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/01a602fdd99925bc098ae1e3c5012709_2993019.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/01a602fdd99925bc098ae1e3c5012709_2993019.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student plots a curve on his hull model.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 019.jpg
 uid: 01a602fd-d999-25bc-098a-e1e3c5012709
 ---
+A student plots a curve on his hull model.
+
