--- a/content/resources/2993021.md
+++ b/content/resources/2993021.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: A student prepares to make his initial profile cut.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/770122004f7378158ef674e8f92da863_2993021.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/770122004f7378158ef674e8f92da863_2993021.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student prepares to make his initial profile cut.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 021.jpg
 uid: 77012200-4f73-7815-8ef6-74e8f92da863
 ---
+A student prepares to make his initial profile cut.
+
