--- a/content/resources/2993023.md
+++ b/content/resources/2993023.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: A student prepares to make his initial profile cut.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/d1b28cf8a2be3cf29eed639252947b01_2993023.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/d1b28cf8a2be3cf29eed639252947b01_2993023.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student prepares to make his initial profile cut.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 023.jpg
 uid: d1b28cf8-a2be-3cf2-9eed-639252947b01
 ---
+A student prepares to make his initial profile cut.
+
