--- a/content/resources/2993024.md
+++ b/content/resources/2993024.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Students at various stages of carving process.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/a9b73fad2fc41dee4487c051601f1324_2993024.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/a9b73fad2fc41dee4487c051601f1324_2993024.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Students at various stages of carving process.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 024.jpg
 uid: a9b73fad-2fc4-1dee-4487-c051601f1324
 ---
+Students at various stages of carving process.
+
