--- a/content/resources/2993026.md
+++ b/content/resources/2993026.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Cutting away.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/884947e138a8ad720ce9de57765258da_2993026.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/884947e138a8ad720ce9de57765258da_2993026.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Cutting away.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 026.jpg
 uid: 884947e1-38a8-ad72-0ce9-de57765258da
 ---
+Cutting away.
+
