--- a/content/resources/2993028.md
+++ b/content/resources/2993028.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Students at work at various stages.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/7be035edf19e17eb3351816a3abb1526_2993028.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/7be035edf19e17eb3351816a3abb1526_2993028.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Students at work at various stages.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 028.jpg
 uid: 7be035ed-f19e-17eb-3351-816a3abb1526
 ---
+Students at work at various stages.
+
