--- a/content/resources/2993029.md
+++ b/content/resources/2993029.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Reuben and a student look at traditional boat designs together.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/79071244d5eb12e01f66ae2f1055cd7b_2993029.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/79071244d5eb12e01f66ae2f1055cd7b_2993029.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Reuben and a student look at traditional boat designs together.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 029.jpg
 uid: 79071244-d5eb-12e0-1f66-ae2f1055cd7b
 ---
+Reuben and a student look at traditional boat designs together.
+
