--- a/content/resources/2993030.md
+++ b/content/resources/2993030.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: A student refines her hull model's shape with a plane.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/db7c3d8fbb265d771e5c7e88fa9ba1ab_2993030.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/db7c3d8fbb265d771e5c7e88fa9ba1ab_2993030.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student refines her hull model's shape with a plane.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 030.jpg
 uid: db7c3d8f-bb26-5d77-1e5c-7e88fa9ba1ab
 ---
+A student refines her hull model's shape with a plane.
+
