--- a/content/resources/2993031.md
+++ b/content/resources/2993031.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Reuben discusses a model's shape with a student.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/3b6ea700f4b38a41576026fa9637b367_2993031.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/3b6ea700f4b38a41576026fa9637b367_2993031.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Reuben discusses a model's shape with a student.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 031.jpg
 uid: 3b6ea700-f4b3-8a41-5760-26fa9637b367
 ---
+Reuben discusses a model's shape with a student.
+
