--- a/content/resources/2993032.md
+++ b/content/resources/2993032.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: A student fairs a model.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/f6be00ed42fa6beb76cfaac6202e25f9_2993032.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/f6be00ed42fa6beb76cfaac6202e25f9_2993032.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student fairs a model.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 032.jpg
 uid: f6be00ed-42fa-6beb-76cf-aac6202e25f9
 ---
+A student fairs a model.
+
