--- a/content/resources/2993034.md
+++ b/content/resources/2993034.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: A student sands his hull shape smooth.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/f70b5bfb26fcd01b36fbd550637bc06c_2993034.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/f70b5bfb26fcd01b36fbd550637bc06c_2993034.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student sands his hull shape smooth.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 034.jpg
 uid: f70b5bfb-26fc-d01b-36fb-d550637bc06c
 ---
+A student sands his hull shape smooth.
+
