--- a/content/resources/2993036.md
+++ b/content/resources/2993036.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: A student contemplates hull shaping progress.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/c54ba66e72e72dafc74c57433ef174b9_2993036.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/c54ba66e72e72dafc74c57433ef174b9_2993036.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student contemplates hull shaping progress.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 036.jpg
 uid: c54ba66e-72e7-2daf-c74c-57433ef174b9
 ---
+A student contemplates hull shaping progress.
+
