--- a/content/resources/2993037.md
+++ b/content/resources/2993037.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: More contemplation.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/10bfc0682d542e85a8c4714639dc8a41_2993037.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/10bfc0682d542e85a8c4714639dc8a41_2993037.jpg
 file_type: image/jpeg
 image_metadata:
   caption: More contemplation.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 037.jpg
 uid: 10bfc068-2d54-2e85-a8c4-714639dc8a41
 ---
+More contemplation.
+
