--- a/content/resources/2993038.md
+++ b/content/resources/2993038.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Students work at various stages of progress.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/ff970f041dbeb05763f4ac00ad75c582_2993038.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/ff970f041dbeb05763f4ac00ad75c582_2993038.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Students work at various stages of progress.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 038.jpg
 uid: ff970f04-1dbe-b057-63f4-ac00ad75c582
 ---
+Students work at various stages of progress.
+
