--- a/content/resources/2993039.md
+++ b/content/resources/2993039.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: More work at different carving stages.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/050aea8b5d41ac9f517ad4978619eada_2993039.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/050aea8b5d41ac9f517ad4978619eada_2993039.jpg
 file_type: image/jpeg
 image_metadata:
   caption: More work at different carving stages.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 039.jpg
 uid: 050aea8b-5d41-ac9f-517a-d4978619eada
 ---
+More work at different carving stages.
+
