--- a/content/resources/2993040.md
+++ b/content/resources/2993040.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Reuben discusses hull model progress with a student.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/ee15dcaa2fdb99f33ac4bed5939bbd41_2993040.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/ee15dcaa2fdb99f33ac4bed5939bbd41_2993040.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Reuben discusses hull model progress with a student.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 040.jpg
 uid: ee15dcaa-2fdb-99f3-3ac4-bed5939bbd41
 ---
+Reuben discusses hull model progress with a student.
+
