--- a/content/resources/2993041.md
+++ b/content/resources/2993041.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Rough shaping with a chisel.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/99fc31b13032fc82ed6af00d7fbd492c_2993041.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/99fc31b13032fc82ed6af00d7fbd492c_2993041.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Rough shaping with a chisel.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 041.jpg
 uid: 99fc31b1-3032-fc82-ed6a-f00d7fbd492c
 ---
+Rough shaping with a chisel.
+
