--- a/content/resources/2993042.md
+++ b/content/resources/2993042.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: A student sites the underwater shape of her hull model.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/1fbf530944fd475e92b368c64a7e2304_2993042.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/1fbf530944fd475e92b368c64a7e2304_2993042.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student sites the underwater shape of her hull model.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 042.jpg
 uid: 1fbf5309-44fd-475e-92b3-68c64a7e2304
 ---
+A student sites the underwater shape of her hull model.
+
