--- a/content/resources/2993049.md
+++ b/content/resources/2993049.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Reuben references historical design.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/b2d7e46da40a683b9269f1f981af1337_2993049.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/b2d7e46da40a683b9269f1f981af1337_2993049.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Reuben references historical design.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 049.jpg
 uid: b2d7e46d-a40a-683b-9269-f1f981af1337
 ---
+Reuben references historical design.
+
