--- a/content/resources/2993051.md
+++ b/content/resources/2993051.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Student sites student siting model.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/dda365aa13284a26ddd00cb0d236760e_2993051.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/dda365aa13284a26ddd00cb0d236760e_2993051.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Student sites student siting model.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 051.jpg
 uid: dda365aa-1328-4a26-ddd0-0cb0d236760e
 ---
+Student sites student siting model.
+
