--- a/content/resources/2993052.md
+++ b/content/resources/2993052.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'Fine shaping with a cabinet scraper. Other key tools: chisel (foreground),
   spokeshave (left), and medium plane (right).'
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/7ef0943ac70f1c1c221942231c31984e_2993052.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/7ef0943ac70f1c1c221942231c31984e_2993052.jpg
 file_type: image/jpeg
 image_metadata:
   caption: 'Fine shaping with a cabinet scraper. Other key tools: chisel (foreground),
@@ -19,3 +19,5 @@ resourcetype: Image
 title: 2.993 052.jpg
 uid: 7ef0943a-c70f-1c1c-2219-42231c31984e
 ---
+Fine shaping with a cabinet scraper. Other key tools: chisel (foreground), spokeshave (left), and medium plane (right).
+
