--- a/content/resources/2993054.md
+++ b/content/resources/2993054.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Reuben and a student discuss the implications of hull shape.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/4b1fddcf0a8b68d1db0fab36391d1730_2993054.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/4b1fddcf0a8b68d1db0fab36391d1730_2993054.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Reuben and a student discuss the implications of hull shape.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 054.jpg
 uid: 4b1fddcf-0a8b-68d1-db0f-ab36391d1730
 ---
+Reuben and a student discuss the implications of hull shape.
+
