--- a/content/resources/2993055.md
+++ b/content/resources/2993055.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: More discussion.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/a23d80562530cc76c836652404df20be_2993055.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/a23d80562530cc76c836652404df20be_2993055.jpg
 file_type: image/jpeg
 image_metadata:
   caption: More discussion.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 055.jpg
 uid: a23d8056-2530-cc76-c836-652404df20be
 ---
+More discussion.
+
