--- a/content/resources/2993056.md
+++ b/content/resources/2993056.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: A student in the foreground uses a spokeshave in a tight curve near the
   bow of her model.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/b6957f429122b9fc149f472f2683b8f6_2993056.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/b6957f429122b9fc149f472f2683b8f6_2993056.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student in the foreground uses a spokeshave in a tight curve near the
@@ -19,3 +19,5 @@ resourcetype: Image
 title: 2.993 056.jpg
 uid: b6957f42-9122-b9fc-149f-472f2683b8f6
 ---
+A student in the foreground uses a spokeshave in a tight curve near the bow of her model.
+
