--- a/content/resources/2993062.md
+++ b/content/resources/2993062.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'A completed basic lines plan. Top: body plan; middle: profile view;
   bottom: half breadth. (The model itself can be seen at the left.)'
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/d8c20d13997cf8617b5696f87d952ae8_2993062.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/d8c20d13997cf8617b5696f87d952ae8_2993062.jpg
 file_type: image/jpeg
 image_metadata:
   caption: 'A completed basic lines plan. Top: body plan; middle: profile view; bottom:
@@ -19,3 +19,5 @@ resourcetype: Image
 title: 2.993 062.jpg
 uid: d8c20d13-997c-f861-7b56-96f87d952ae8
 ---
+A completed basic lines plan. Top: body plan; middle: profile view; bottom: half breadth. (The model itself can be seen at the left.)
+
