--- a/content/resources/2993064.md
+++ b/content/resources/2993064.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Tony discusses the process of developing lines plans.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/1662b7db04861d61bf54c05039de623f_2993064.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/1662b7db04861d61bf54c05039de623f_2993064.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Tony discusses the process of developing lines plans.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 064.jpg
 uid: 1662b7db-0486-1d61-bf54-c05039de623f
 ---
+Tony discusses the process of developing lines plans.
+
