--- a/content/resources/2993066.md
+++ b/content/resources/2993066.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: More lines plan demonstration.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/9f1426b94a15018c408d86e46d5da01e_2993066.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/9f1426b94a15018c408d86e46d5da01e_2993066.jpg
 file_type: image/jpeg
 image_metadata:
   caption: More lines plan demonstration.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 066.jpg
 uid: 9f1426b9-4a15-018c-408d-86e46d5da01e
 ---
+More lines plan demonstration.
+
