--- a/content/resources/2993069.md
+++ b/content/resources/2993069.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: A student lays out grid lines for his lines plan.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/0fc2ac9d256a60a6de9453d45ffb39a5_2993069.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/0fc2ac9d256a60a6de9453d45ffb39a5_2993069.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student lays out grid lines for his lines plan.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 069.jpg
 uid: 0fc2ac9d-256a-60a6-de94-53d45ffb39a5
 ---
+A student lays out grid lines for his lines plan.
+
