--- a/content/resources/2993070.md
+++ b/content/resources/2993070.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Final shaping of a model.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/4df22f6f7dc15c5fea8184ef453c7e94_2993070.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/4df22f6f7dc15c5fea8184ef453c7e94_2993070.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Final shaping of a model.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 070.jpg
 uid: 4df22f6f-7dc1-5c5f-ea81-84ef453c7e94
 ---
+Final shaping of a model.
+
