--- a/content/resources/2993071.md
+++ b/content/resources/2993071.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: A student uses the spokeshave.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/d09d69cb3ee13cf469d786e70c140790_2993071.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/d09d69cb3ee13cf469d786e70c140790_2993071.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A student uses the spokeshave.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 071.jpg
 uid: d09d69cb-3ee1-3cf4-69d7-86e70c140790
 ---
+A student uses the spokeshave.
+
