--- a/content/resources/2993078.md
+++ b/content/resources/2993078.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Lifts from a builder's model separated on the table.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/37e692ba1c4ea0214a4995507b86f599_2993078.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/37e692ba1c4ea0214a4995507b86f599_2993078.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Lifts from a builder's model separated on the table.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 078.jpg
 uid: 37e692ba-1c4e-a021-4a49-95507b86f599
 ---
+Lifts from a builder's model separated on the table.
+
