--- a/content/resources/29931448.md
+++ b/content/resources/29931448.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Another view of the models.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/de6a7d690b45542f3f6b57cabce94d0a_29931448.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/de6a7d690b45542f3f6b57cabce94d0a_29931448.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Another view of the models.
@@ -17,3 +17,5 @@ resourcetype: Image
 title: 2.993_1448.jpg
 uid: de6a7d69-0b45-542f-3f6b-57cabce94d0a
 ---
+Another view of the models.
+
