--- a/content/resources/29931449.md
+++ b/content/resources/29931449.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: The instructors and class with all of their completed half-hull models.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/04d2cb7f6bbda904323c5569ff27bdcf_29931449.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/04d2cb7f6bbda904323c5569ff27bdcf_29931449.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The instructors and class with all of their completed half-hull models.
@@ -17,3 +17,5 @@ resourcetype: Image
 title: 2.993_1449.jpg
 uid: 04d2cb7f-6bbd-a904-323c-5569ff27bdcf
 ---
+The instructors and class with all of their completed half-hull models.
+
