--- a/content/resources/29931507.md
+++ b/content/resources/29931507.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: The class examines more historical models.
-file: /media/courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/f3e18fb80eb21a8c96a47350c4451774_29931507.jpg
+file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/f3e18fb80eb21a8c96a47350c4451774_29931507.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The class examines more historical models.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 2.993 1507.jpg
 uid: f3e18fb8-0eb2-1a8c-96a4-7350c4451774
 ---
+The class examines more historical models.
+
