Sync all content

--- a/content/resources/2-993iap07-th.md
+++ b/content/resources/2-993iap07-th.md
@@ -9,10 +9,10 @@ image_metadata:
   credit: ''
   image-alt: Instructors and students with their half-hull model boats.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 2-993iap07-th.jpg
 uid: 3158b0e4-9cb3-73be-a841-5e0fd6b147db
 ---
 New image Upload
-
