--- a/content/resources/2993007.md
+++ b/content/resources/2993007.md
@@ -11,6 +11,7 @@ image_metadata:
   image-alt: Instructor Tony Dias demonstrates layout of hull shape on a wood block
     prior to the first cut.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Image Gallery
 parent_type: CourseSection
@@ -20,4 +21,3 @@ title: 2.993 007.jpg
 uid: 41d38a16-2e85-3c24-8591-e153def5db10
 ---
 Instructor Tony Dias demonstrates layout of hull shape on a wood block prior to the first cut.
-
