--- a/content/resources/2993017.md
+++ b/content/resources/2993017.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Instructors Chris Dewart and Reuben Smith set up the band saw.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Image Gallery
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 017.jpg
 uid: 75d7542c-f285-5f68-21b2-62e3b463443d
 ---
 Instructors Chris Dewart and Reuben Smith set up the band saw.
-
