--- a/content/resources/2993025.md
+++ b/content/resources/2993025.md
@@ -10,6 +10,7 @@ image_metadata:
   image-alt: A student cuts a shear line.  Note the profile drawn in pencil on the
     side.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -19,4 +20,3 @@ title: 2.993 025.jpg
 uid: 38d79a51-45ca-a010-3d9f-5265f79d95ee
 ---
 A student cuts a shear line. Note the profile drawn in pencil on the side.
-
