--- a/content/resources/2993040.md
+++ b/content/resources/2993040.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Reuben discusses hull model progress with a student.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 040.jpg
 uid: ee15dcaa-2fdb-99f3-3ac4-bed5939bbd41
 ---
 Reuben discusses hull model progress with a student.
-
