--- a/content/resources/2993056.md
+++ b/content/resources/2993056.md
@@ -11,6 +11,7 @@ image_metadata:
   image-alt: A student in the foreground uses a spokeshave in a tight curve near the
     bow of her model.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -20,4 +21,3 @@ title: 2.993 056.jpg
 uid: b6957f42-9122-b9fc-149f-472f2683b8f6
 ---
 A student in the foreground uses a spokeshave in a tight curve near the bow of her model.
-
