--- a/content/resources/2993061.md
+++ b/content/resources/2993061.md
@@ -11,6 +11,7 @@ image_metadata:
   image-alt: Reuben and a student begin to lay out a lines plan for the model to the
     right.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Drawing up plans for the completed models
 parent_type: CourseSection
@@ -20,4 +21,3 @@ title: 2.993 061.jpg
 uid: 06872308-4c5b-6d57-fcab-d5f8fc8e5b5b
 ---
 Reuben and a student begin to lay out a lines plan for the model to the right.
-
