--- a/content/resources/2993062.md
+++ b/content/resources/2993062.md
@@ -11,6 +11,7 @@ image_metadata:
   image-alt: 'A completed basic lines plan.  Top: body plan; middle: profile view;
     bottom: half breadth.  (The model itself can be seen at the left.)'
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Drawing up plans for the completed models
 parent_type: CourseSection
@@ -20,4 +21,3 @@ title: 2.993 062.jpg
 uid: d8c20d13-997c-f861-7b56-96f87d952ae8
 ---
 A completed basic lines plan. Top: body plan; middle: profile view; bottom: half breadth. (The model itself can be seen at the left.)
-
