--- a/content/resources/2993064.md
+++ b/content/resources/2993064.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Tony discusses the process of developing lines plans.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Drawing up plans for the completed models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 064.jpg
 uid: 1662b7db-0486-1d61-bf54-c05039de623f
 ---
 Tony discusses the process of developing lines plans.
-
