--- a/content/resources/2993074.md
+++ b/content/resources/2993074.md
@@ -11,6 +11,7 @@ image_metadata:
   image-alt: Hart curator Kurt Hasselbalch discusses the design relationship between
     historic plans and a builder's model.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Exploring the MIT Museum's stored nautical collections
 parent_type: CourseSection
@@ -20,4 +21,3 @@ title: 2.993 074.jpg
 uid: 24082748-1696-f17b-95ef-cf5f1db0f814
 ---
 Hart curator Kurt Hasselbalch discusses the design relationship between historic plans and a builder's model.
-
