--- a/content/resources/2993078.md
+++ b/content/resources/2993078.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Lifts from a builder's model separated on the table.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Exploring the MIT Museum's stored nautical collections
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 078.jpg
 uid: 37e692ba-1c4e-a021-4a49-95507b86f599
 ---
 Lifts from a builder's model separated on the table.
-
