--- a/content/resources/29931447.md
+++ b/content/resources/29931447.md
@@ -9,6 +9,7 @@ image_metadata:
   image-alt: All the finished half-hull models laid out.
 learning_resource_types:
 - Projects
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Final Projects
 parent_type: CourseSection
@@ -18,4 +19,3 @@ title: 2.993_1447.jpg
 uid: b1d1ad88-5d5d-afc4-7cdc-8a475bc424df
 ---
 All the finished half-hull models laid out.
-
