--- a/content/resources/29931448.md
+++ b/content/resources/29931448.md
@@ -9,6 +9,7 @@ image_metadata:
   image-alt: Another view of the models.
 learning_resource_types:
 - Projects
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Final Projects
 parent_type: CourseSection
@@ -18,4 +19,3 @@ title: 2.993_1448.jpg
 uid: de6a7d69-0b45-542f-3f6b-57cabce94d0a
 ---
 Another view of the models.
-
