--- a/content/resources/29931508.md
+++ b/content/resources/29931508.md
@@ -11,6 +11,7 @@ image_metadata:
   image-alt: Tony discusses the variety of hull shapes displayed in the Museum's collection
     of historical half hull models.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Exploring the MIT Museum's stored nautical collections
 parent_type: CourseSection
@@ -20,4 +21,3 @@ title: 2.993 1508.jpg
 uid: 95bea347-44b7-34ea-3063-b9935b414818
 ---
 Tony discusses the variety of hull shapes displayed in the Museum's collection of historical half hull models.
-
