--- a/content/resources/2-993iap07.md
+++ b/content/resources/2-993iap07.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Instructors and students with their half-hull model boats.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 2-993iap07.jpg
 uid: 7bc51557-80b2-93a6-bc5a-37c8d0911886
 ---
 The instructors and students pose with their completed half-hull model boats. (Photograph by Kurt Hasselbalch.)
-
