--- a/content/resources/2993003.md
+++ b/content/resources/2993003.md
@@ -11,6 +11,7 @@ image_metadata:
   image-alt: Students review historic designs in preparation for laying out a preliminary
     design on their own wooden model.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Image Gallery
 parent_type: CourseSection
@@ -20,4 +21,3 @@ title: 2.993 003.jpg
 uid: 6af83a98-65f3-a100-3fe4-84a6d3a668d0
 ---
 Students review historic designs in preparation for laying out a preliminary design on their own wooden model.
-
