--- a/content/resources/2993009.md
+++ b/content/resources/2993009.md
@@ -11,6 +11,7 @@ image_metadata:
   image-alt: Instructor Reuben Smith shows the class a model profile sawn from a wood
     block.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Image Gallery
 parent_type: CourseSection
@@ -20,4 +21,3 @@ title: 2.993 009.jpg
 uid: 2a9c28ea-4a34-d440-a827-aeb1de2cf754
 ---
 Instructor Reuben Smith shows the class a model profile sawn from a wood block.
-
