--- a/content/resources/2993010.md
+++ b/content/resources/2993010.md
@@ -10,6 +10,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Reuben examines a model shape after planing.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Image Gallery
 parent_type: CourseSection
@@ -19,4 +20,3 @@ title: 2.993 010.jpg
 uid: 5eb997fc-f38f-1cb8-e443-3de75118669f
 ---
 Instructor Reuben Smith shows the class a model profile sawn from a wood block.
-
