--- a/content/resources/2993011.md
+++ b/content/resources/2993011.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Reuben discusses different model shapes with the class.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Image Gallery
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 011.jpg
 uid: 8095c7cb-49f2-aac0-7797-4a0077e2fccb
 ---
 Reuben discusses different model shapes with the class.
-
