--- a/content/resources/2993012.md
+++ b/content/resources/2993012.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Reuben studies the shear line.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Image Gallery
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 012.jpg
 uid: 90d6a454-fe19-06b8-810e-f94e3dabf46b
 ---
 Reuben studies the shear line.
-
