--- a/content/resources/2993014.md
+++ b/content/resources/2993014.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Reuben planes a rough shape.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Image Gallery
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 014.jpg
 uid: cdf72a0e-8c81-b939-4a6d-a74b3a55f437
 ---
 Reuben planes a rough shape.
-
