--- a/content/resources/2993015.md
+++ b/content/resources/2993015.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Reuben demonstrates another planing technique.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Image Gallery
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 015.jpg
 uid: 468cc5b1-ad9a-232f-d816-b26c7cc26650
 ---
 Reuben demonstrates another planing technique.
-
