--- a/content/resources/2993016.md
+++ b/content/resources/2993016.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: More planing technique.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Image Gallery
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 016.jpg
 uid: 30daf96e-30b7-c9bb-b641-255e8dcbaf5d
 ---
 More planing technique.
-
