--- a/content/resources/2993018.md
+++ b/content/resources/2993018.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student cuts a design profile from a wood block.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 018.jpg
 uid: f2b8af50-23b9-3758-54ee-78ff2df06ad4
 ---
 A student cuts a design profile from a wood block.
-
