--- a/content/resources/2993019.md
+++ b/content/resources/2993019.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student plots a curve on his hull model.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 019.jpg
 uid: 01a602fd-d999-25bc-098a-e1e3c5012709
 ---
 A student plots a curve on his hull model.
-
