--- a/content/resources/2993020.md
+++ b/content/resources/2993020.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Another student lays out a shear curve on his hull model.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 019.jpg
 uid: ec4f58f2-4f1a-f6ee-545c-7ce7342953a5
 ---
 Another student lays out a shear curve on his hull model.
-
