--- a/content/resources/2993021.md
+++ b/content/resources/2993021.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student prepares to make his initial profile cut.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 021.jpg
 uid: 77012200-4f73-7815-8ef6-74e8f92da863
 ---
 A student prepares to make his initial profile cut.
-
