--- a/content/resources/2993022.md
+++ b/content/resources/2993022.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Another student makes his initial profile cut.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 022.jpg
 uid: 0361c990-a984-0867-97a7-3a220678341e
 ---
 Another student makes his initial profile cut.
-
