--- a/content/resources/2993023.md
+++ b/content/resources/2993023.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student prepares to make his initial profile cut.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 023.jpg
 uid: d1b28cf8-a2be-3cf2-9eed-639252947b01
 ---
 A student prepares to make his initial profile cut.
-
