--- a/content/resources/2993024.md
+++ b/content/resources/2993024.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Students at various stages of carving process.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 024.jpg
 uid: a9b73fad-2fc4-1dee-4487-c051601f1324
 ---
 Students at various stages of carving process.
-
