--- a/content/resources/2993026.md
+++ b/content/resources/2993026.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Cutting away.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 026.jpg
 uid: 884947e1-38a8-ad72-0ce9-de57765258da
 ---
 Cutting away.
-
