--- a/content/resources/2993028.md
+++ b/content/resources/2993028.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Students at work at various stages.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 028.jpg
 uid: 7be035ed-f19e-17eb-3351-816a3abb1526
 ---
 Students at work at various stages.
-
