--- a/content/resources/2993029.md
+++ b/content/resources/2993029.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Reuben and a student look at traditional boat designs together.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 029.jpg
 uid: 79071244-d5eb-12e0-1f66-ae2f1055cd7b
 ---
 Reuben and a student look at traditional boat designs together.
-
