--- a/content/resources/2993030.md
+++ b/content/resources/2993030.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student refines her hull model's shape with a plane.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 030.jpg
 uid: db7c3d8f-bb26-5d77-1e5c-7e88fa9ba1ab
 ---
 A student refines her hull model's shape with a plane.
-
