--- a/content/resources/2993031.md
+++ b/content/resources/2993031.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Reuben discusses a model's shape with a student.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 031.jpg
 uid: 3b6ea700-f4b3-8a41-5760-26fa9637b367
 ---
 Reuben discusses a model's shape with a student.
-
