--- a/content/resources/2993032.md
+++ b/content/resources/2993032.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student fairs a model.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 032.jpg
 uid: f6be00ed-42fa-6beb-76cf-aac6202e25f9
 ---
 A student fairs a model.
-
