--- a/content/resources/2993034.md
+++ b/content/resources/2993034.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student sands his hull shape smooth.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 034.jpg
 uid: f70b5bfb-26fc-d01b-36fb-d550637bc06c
 ---
 A student sands his hull shape smooth.
-
