--- a/content/resources/2993035.md
+++ b/content/resources/2993035.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student uses the band saw.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 035.jpg
 uid: b9573211-d901-ea05-e0d3-6bd999494aa3
 ---
 A student uses the band saw.
-
