--- a/content/resources/2993036.md
+++ b/content/resources/2993036.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student contemplates hull shaping progress.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 036.jpg
 uid: c54ba66e-72e7-2daf-c74c-57433ef174b9
 ---
 A student contemplates hull shaping progress.
-
