--- a/content/resources/2993037.md
+++ b/content/resources/2993037.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: More contemplation.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 037.jpg
 uid: 10bfc068-2d54-2e85-a8c4-714639dc8a41
 ---
 More contemplation.
-
