--- a/content/resources/2993038.md
+++ b/content/resources/2993038.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Students work at various stages of progress.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 038.jpg
 uid: ff970f04-1dbe-b057-63f4-ac00ad75c582
 ---
 Students work at various stages of progress.
-
