--- a/content/resources/2993039.md
+++ b/content/resources/2993039.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: More work at different carving stages.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 039.jpg
 uid: 050aea8b-5d41-ac9f-517a-d4978619eada
 ---
 More work at different carving stages.
-
