--- a/content/resources/2993041.md
+++ b/content/resources/2993041.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Rough shaping with a chisel.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 041.jpg
 uid: 99fc31b1-3032-fc82-ed6a-f00d7fbd492c
 ---
 Rough shaping with a chisel.
-
