--- a/content/resources/2993042.md
+++ b/content/resources/2993042.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student sites the underwater shape of her hull model.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 042.jpg
 uid: 1fbf5309-44fd-475e-92b3-68c64a7e2304
 ---
 A student sites the underwater shape of her hull model.
-
