--- a/content/resources/2993043.md
+++ b/content/resources/2993043.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Reuben and a student discuss hull model shape.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 043.jpg
 uid: e29fe4a7-fbf7-5ba0-3545-31185c132b66
 ---
 Reuben and a student discuss hull model shape.
-
