--- a/content/resources/2993044.md
+++ b/content/resources/2993044.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: More chisel work.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2993044.jpg
 uid: 7b2cce8c-5c00-31b5-8e46-0f73084cca8d
 ---
 More chisel work.
-
