--- a/content/resources/2993046.md
+++ b/content/resources/2993046.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student prepares to mount his model.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 046.jpg
 uid: 8c476509-f9f0-90dc-623f-160cd647b984
 ---
 A student prepares to mount his model.
-
