--- a/content/resources/2993047.md
+++ b/content/resources/2993047.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Reuben discusses sail design with students.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 047.jpg
 uid: d379f2ce-52a9-b18a-e2ba-31a706197e8b
 ---
 Reuben discusses sail design with students.
-
