--- a/content/resources/2993048.md
+++ b/content/resources/2993048.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: More model shaping.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 048.jpg
 uid: fc0e3c5e-96c0-b162-6047-b0f6cd9b7de0
 ---
 More model shaping.
-
