--- a/content/resources/2993049.md
+++ b/content/resources/2993049.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Reuben references historical design.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 049.jpg
 uid: b2d7e46d-a40a-683b-9269-f1f981af1337
 ---
 Reuben references historical design.
-
