--- a/content/resources/2993050.md
+++ b/content/resources/2993050.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student adjusts a spokeshave.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 050.jpg
 uid: f31d54f6-f5a0-e6f9-f6aa-4e326a5e5ac9
 ---
 A student adjusts a spokeshave.
-
