--- a/content/resources/2993051.md
+++ b/content/resources/2993051.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Student sites student siting model.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 051.jpg
 uid: dda365aa-1328-4a26-ddd0-0cb0d236760e
 ---
 Student sites student siting model.
-
