--- a/content/resources/2993052.md
+++ b/content/resources/2993052.md
@@ -11,6 +11,7 @@ image_metadata:
   image-alt: 'Fine shaping with a cabinet scraper.  Other key tools: chisel (foreground),
     spokeshave (left), and medium plane (right).'
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -20,4 +21,3 @@ title: 2.993 052.jpg
 uid: 7ef0943a-c70f-1c1c-2219-42231c31984e
 ---
 Fine shaping with a cabinet scraper. Other key tools: chisel (foreground), spokeshave (left), and medium plane (right).
-
