--- a/content/resources/2993053.md
+++ b/content/resources/2993053.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Carving away.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 053.jpg
 uid: 7e424626-b98b-e501-2406-9ca2cab6d016
 ---
 Carving away.
-
