--- a/content/resources/2993054.md
+++ b/content/resources/2993054.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Reuben and a student discuss the implications of hull shape.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 054.jpg
 uid: 4b1fddcf-0a8b-68d1-db0f-ab36391d1730
 ---
 Reuben and a student discuss the implications of hull shape.
-
