--- a/content/resources/2993058.md
+++ b/content/resources/2993058.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Student fairs model with sandpaper.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 058.jpg
 uid: 43eb05a4-45e2-8ea2-7f98-652baae99938
 ---
 Student fairs model with sandpaper.
-
