--- a/content/resources/2993059.md
+++ b/content/resources/2993059.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student in the foreground planes his model.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 059.jpg
 uid: b505d910-c3c8-6aae-1e3a-7b721f906273
 ---
 A student in the foreground planes his model.
-
