--- a/content/resources/2993060.md
+++ b/content/resources/2993060.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student discusses his model with Tony
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 060.jpg
 uid: c1784651-e9b9-0f8a-fad6-327d73e879fc
 ---
 A student discusses his model with Tony
-
