--- a/content/resources/2993066.md
+++ b/content/resources/2993066.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: More lines plan demonstration.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Drawing up plans for the completed models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 066.jpg
 uid: 9f1426b9-4a15-018c-408d-86e46d5da01e
 ---
 More lines plan demonstration.
-
