--- a/content/resources/2993069.md
+++ b/content/resources/2993069.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student lays out grid lines for his lines plan.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Drawing up plans for the completed models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 069.jpg
 uid: 0fc2ac9d-256a-60a6-de94-53d45ffb39a5
 ---
 A student lays out grid lines for his lines plan.
-
