--- a/content/resources/2993070.md
+++ b/content/resources/2993070.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Final shaping of a model.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 070.jpg
 uid: 4df22f6f-7dc1-5c5f-ea81-84ef453c7e94
 ---
 Final shaping of a model.
-
