--- a/content/resources/2993071.md
+++ b/content/resources/2993071.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student uses the spokeshave.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 071.jpg
 uid: d09d69cb-3ee1-3cf4-69d7-86e70c140790
 ---
 A student uses the spokeshave.
-
