--- a/content/resources/2993072.md
+++ b/content/resources/2993072.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: A student uses a rasp in a tight curve.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 072.jpg
 uid: 2a000c27-d60c-3d25-042e-361ff5f5033c
 ---
 A student uses a rasp in a tight curve.
-
