--- a/content/resources/2993073.md
+++ b/content/resources/2993073.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: More work with a rasp.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Building the Models
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 073.jpg
 uid: f8b34a9c-6a6a-f94d-1422-a87e1e77a143
 ---
 More work with a rasp.
-
