--- a/content/resources/2993077.md
+++ b/content/resources/2993077.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: Kurt disassembles lifts from a builder's model.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Exploring the MIT Museum's stored nautical collections
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 077.jpg
 uid: 2f0134dc-507f-52f9-5674-840fa473f0d7
 ---
 Kurt disassembles lifts from a builder's model.
-
