--- a/content/resources/29931449.md
+++ b/content/resources/29931449.md
@@ -9,6 +9,7 @@ image_metadata:
   image-alt: The instructors and class with all of their completed half-hull models.
 learning_resource_types:
 - Projects
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Final Projects
 parent_type: CourseSection
@@ -18,4 +19,3 @@ title: 2.993_1449.jpg
 uid: 04d2cb7f-6bbd-a904-323c-5569ff27bdcf
 ---
 The instructors and class with all of their completed half-hull models.
-
