--- a/content/resources/29931507.md
+++ b/content/resources/29931507.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Photo by Kurt Hasselbalch.
   image-alt: The class examines more historical models.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Exploring the MIT Museum's stored nautical collections
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 2.993 1507.jpg
 uid: f3e18fb8-0eb2-1a8c-96a4-7350c4451774
 ---
 The class examines more historical models.
-
