Sync all content

--- a/content/resources/2993012.md
+++ b/content/resources/2993012.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Reuben studies the shear line.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/90d6a454fe1906b8810ef94e3dabf46b_2993012.jpg
+file_size: 74111
 file_type: image/jpeg
 image_metadata:
   caption: Reuben studies the shear line.
