--- a/content/resources/2993014.md
+++ b/content/resources/2993014.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Reuben planes a rough shape.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/cdf72a0e8c81b9394a6da74b3a55f437_2993014.jpg
+file_size: 75504
 file_type: image/jpeg
 image_metadata:
   caption: Reuben planes a rough shape.
