--- a/content/resources/2993016.md
+++ b/content/resources/2993016.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: More planing technique.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/30daf96e30b7c9bbb641255e8dcbaf5d_2993016.jpg
+file_size: 72704
 file_type: image/jpeg
 image_metadata:
   caption: More planing technique.
