--- a/content/resources/2993021.md
+++ b/content/resources/2993021.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: A student prepares to make his initial profile cut.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/770122004f7378158ef674e8f92da863_2993021.jpg
+file_size: 63034
 file_type: image/jpeg
 image_metadata:
   caption: A student prepares to make his initial profile cut.
