--- a/content/resources/2993023.md
+++ b/content/resources/2993023.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: A student prepares to make his initial profile cut.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/d1b28cf8a2be3cf29eed639252947b01_2993023.jpg
+file_size: 67164
 file_type: image/jpeg
 image_metadata:
   caption: A student prepares to make his initial profile cut.
