--- a/content/resources/2993031.md
+++ b/content/resources/2993031.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Reuben discusses a model's shape with a student.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/3b6ea700f4b38a41576026fa9637b367_2993031.jpg
+file_size: 60860
 file_type: image/jpeg
 image_metadata:
   caption: Reuben discusses a model's shape with a student.
