--- a/content/resources/2993041.md
+++ b/content/resources/2993041.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Rough shaping with a chisel.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/99fc31b13032fc82ed6af00d7fbd492c_2993041.jpg
+file_size: 67638
 file_type: image/jpeg
 image_metadata:
   caption: Rough shaping with a chisel.
