--- a/content/resources/2993042.md
+++ b/content/resources/2993042.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: A student sites the underwater shape of her hull model.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/1fbf530944fd475e92b368c64a7e2304_2993042.jpg
+file_size: 73970
 file_type: image/jpeg
 image_metadata:
   caption: A student sites the underwater shape of her hull model.
