--- a/content/resources/2993050.md
+++ b/content/resources/2993050.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: A student adjusts a spokeshave.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/f31d54f6f5a0e6f9f6aa4e326a5e5ac9_2993050.jpg
+file_size: 67241
 file_type: image/jpeg
 image_metadata:
   caption: A student adjusts a spokeshave.
