--- a/content/resources/2993053.md
+++ b/content/resources/2993053.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Carving away.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/7e424626b98be50124069ca2cab6d016_2993053.jpg
+file_size: 81267
 file_type: image/jpeg
 image_metadata:
   caption: Carving away.
