--- a/content/resources/2993066.md
+++ b/content/resources/2993066.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: More lines plan demonstration.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/9f1426b94a15018c408d86e46d5da01e_2993066.jpg
+file_size: 79478
 file_type: image/jpeg
 image_metadata:
   caption: More lines plan demonstration.
