--- a/content/resources/2993077.md
+++ b/content/resources/2993077.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Kurt disassembles lifts from a builder's model.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/2f0134dc507f52f95674840fa473f0d7_2993077.jpg
+file_size: 71907
 file_type: image/jpeg
 image_metadata:
   caption: Kurt disassembles lifts from a builder's model.
