--- a/content/resources/29931447.md
+++ b/content/resources/29931447.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: All the finished half-hull models laid out.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/b1d1ad885d5dafc47cdc8a475bc424df_29931447.jpg
+file_size: 72812
 file_type: image/jpeg
 image_metadata:
   caption: All the finished half-hull models laid out.
