--- a/content/resources/29931508.md
+++ b/content/resources/29931508.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Tony discusses the variety of hull shapes displayed in the Museum's collection
   of historical half hull models.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/95bea34744b734ea3063b9935b414818_29931508.jpg
+file_size: 94245
 file_type: image/jpeg
 image_metadata:
   caption: Tony discusses the variety of hull shapes displayed in the Museum's collection
