--- a/content/resources/2993011.md
+++ b/content/resources/2993011.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Reuben discusses different model shapes with the class.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/8095c7cb49f2aac077974a0077e2fccb_2993011.jpg
+file_size: 75468
 file_type: image/jpeg
 image_metadata:
   caption: Reuben discusses different model shapes with the class.
