--- a/content/resources/2993022.md
+++ b/content/resources/2993022.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Another student makes his initial profile cut.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/0361c990a984086797a73a220678341e_2993022.jpg
+file_size: 61716
 file_type: image/jpeg
 image_metadata:
   caption: Another student makes his initial profile cut.
