--- a/content/resources/2993024.md
+++ b/content/resources/2993024.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Students at various stages of carving process.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/a9b73fad2fc41dee4487c051601f1324_2993024.jpg
+file_size: 63313
 file_type: image/jpeg
 image_metadata:
   caption: Students at various stages of carving process.
