--- a/content/resources/2993028.md
+++ b/content/resources/2993028.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Students at work at various stages.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/7be035edf19e17eb3351816a3abb1526_2993028.jpg
+file_size: 92207
 file_type: image/jpeg
 image_metadata:
   caption: Students at work at various stages.
