--- a/content/resources/2993030.md
+++ b/content/resources/2993030.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: A student refines her hull model's shape with a plane.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/db7c3d8fbb265d771e5c7e88fa9ba1ab_2993030.jpg
+file_size: 76177
 file_type: image/jpeg
 image_metadata:
   caption: A student refines her hull model's shape with a plane.
