--- a/content/resources/2993035.md
+++ b/content/resources/2993035.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: A student uses the band saw.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/b9573211d901ea05e0d36bd999494aa3_2993035.jpg
+file_size: 67008
 file_type: image/jpeg
 image_metadata:
   caption: A student uses the band saw.
