--- a/content/resources/2993036.md
+++ b/content/resources/2993036.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: A student contemplates hull shaping progress.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/c54ba66e72e72dafc74c57433ef174b9_2993036.jpg
+file_size: 84350
 file_type: image/jpeg
 image_metadata:
   caption: A student contemplates hull shaping progress.
