--- a/content/resources/2993037.md
+++ b/content/resources/2993037.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: More contemplation.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/10bfc0682d542e85a8c4714639dc8a41_2993037.jpg
+file_size: 66764
 file_type: image/jpeg
 image_metadata:
   caption: More contemplation.
