--- a/content/resources/2993040.md
+++ b/content/resources/2993040.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Reuben discusses hull model progress with a student.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/ee15dcaa2fdb99f33ac4bed5939bbd41_2993040.jpg
+file_size: 73950
 file_type: image/jpeg
 image_metadata:
   caption: Reuben discusses hull model progress with a student.
