--- a/content/resources/2993044.md
+++ b/content/resources/2993044.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: More chisel work.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/7b2cce8c5c0031b58e460f73084cca8d_2993044.jpg
+file_size: 80152
 file_type: image/jpeg
 image_metadata:
   caption: More chisel work.
