--- a/content/resources/2993046.md
+++ b/content/resources/2993046.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: A student prepares to mount his model.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/8c476509f9f090dc623f160cd647b984_2993046.jpg
+file_size: 80894
 file_type: image/jpeg
 image_metadata:
   caption: A student prepares to mount his model.
