--- a/content/resources/2993047.md
+++ b/content/resources/2993047.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Reuben discusses sail design with students.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/d379f2ce52a9b18ae2ba31a706197e8b_2993047.jpg
+file_size: 70751
 file_type: image/jpeg
 image_metadata:
   caption: Reuben discusses sail design with students.
