--- a/content/resources/2993049.md
+++ b/content/resources/2993049.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Reuben references historical design.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/b2d7e46da40a683b9269f1f981af1337_2993049.jpg
+file_size: 70894
 file_type: image/jpeg
 image_metadata:
   caption: Reuben references historical design.
