--- a/content/resources/2993056.md
+++ b/content/resources/2993056.md
@@ -3,6 +3,7 @@ content_type: resource
 description: A student in the foreground uses a spokeshave in a tight curve near the
   bow of her model.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/b6957f429122b9fc149f472f2683b8f6_2993056.jpg
+file_size: 87610
 file_type: image/jpeg
 image_metadata:
   caption: A student in the foreground uses a spokeshave in a tight curve near the
