--- a/content/resources/2993058.md
+++ b/content/resources/2993058.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Student fairs model with sandpaper.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/43eb05a445e28ea27f98652baae99938_2993058.jpg
+file_size: 75056
 file_type: image/jpeg
 image_metadata:
   caption: Student fairs model with sandpaper.
