--- a/content/resources/2993070.md
+++ b/content/resources/2993070.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Final shaping of a model.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/4df22f6f7dc15c5fea8184ef453c7e94_2993070.jpg
+file_size: 61445
 file_type: image/jpeg
 image_metadata:
   caption: Final shaping of a model.
