--- a/content/resources/2993078.md
+++ b/content/resources/2993078.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Lifts from a builder's model separated on the table.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/37e692ba1c4ea0214a4995507b86f599_2993078.jpg
+file_size: 69670
 file_type: image/jpeg
 image_metadata:
   caption: Lifts from a builder's model separated on the table.
