--- a/content/resources/29931449.md
+++ b/content/resources/29931449.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: The instructors and class with all of their completed half-hull models.
 file: /courses/2-993-special-topics-in-mechanical-engineering-the-art-and-science-of-boat-design-january-iap-2007/04d2cb7f6bbda904323c5569ff27bdcf_29931449.jpg
+file_size: 88631
 file_type: image/jpeg
 image_metadata:
   caption: The instructors and class with all of their completed half-hull models.
